syntax = "proto3";
option go_package = "github.com/MythicC2Profiles/dns/C2_Profiles/dns/dns/c2_code/dnsserver/dnsgrpc";
package dnsStructs;

enum Actions {
  AgentToServer = 0;
  ServerToAgent = 1;
  ReTransmit = 2;
  MessageLost = 3;
}
message DnsPacket {
  Actions  Action       = 1;
  uint32 AgentSessionID = 2;
  uint32 MessageID      = 3;
  uint32 TotalChunks    = 4;
  uint32 CurrentChunk   = 5;
  bytes  Data           = 6;
}